src/main/java/org/example/videoclub/errors/PeliculaExistenteException.java
package org.example.videoclub.errors;

public class PeliculaExistenteException extends Exception{

    public PeliculaExistenteException(String message) {
        super(message);
    }

}
